2010-01-27  Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fix tuning.conf parsing. Better error handling.
	* Add an example file for tuning.

2010-01-27  Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fix wrong target count in 'status' command.

2009-12-16  Stephane Thiell  <stephane.thiell@cea.fr>
	* Add tuning support for clients. Add automatic tuning after
	successful mounts.
	* Add ssh_fanout option to shine.conf.

2009-12-15  Stephane Thiell  <stephane.thiell@cea.fr>
	* Add label (eg. -l lustre-OST0000) support (credits: AD).

2009-12-07  Aurelien Degremont <aurelien.degremont@cea.fr>
	* Add -x exclude flag on command line.
	* Rewrite nodeset checks. Same code for all commands.

2009-09-29  Jerome Fereyre <jerome.fereyre@bull.net>
	* Add code to support the shine show info command.

2009-09-02  Aurelien Degremont <aurelien.degremont@cea.fr>
	* Now checks -V value before doing status on all nodes (#37).

2009-08-20  Jerome Feyrere <jerome.fereyre@bull.net>
	* Quota tuning is applied even if tuning.conf is disabled (#32).
	* Quota support is working again (#31).

2009-08-18  Jerome Feyrere <jerome.fereyre@bull.net>
	* Add external mode target feature (#17).

2009-08-08  Stephane Thiell  <stephane.thiell@cea.fr>
	* Release: 0.904
	* Fix "start 0 targets" message when no target matches on start/stop.
	Improve status command message too.

2009-08-08  Jerome Feyrere <jerome.fereyre@bull.net>
	* Fix bug when trying to format a started filesystem.

2009-08-08  Aurelien Degremont <aurelien.degremont@cea.fr>
	* Add a default exception handler for all unknown exception.

2009-08-07  Stephane Thiell  <stephane.thiell@cea.fr>
	* Fix errors with tuning.conf. (#6)
	* Check if filesystem filename is not longer than 8 characters (#5)
	* Fix 'assert target.state != None' error with status command (#11)
	* Check target types specified on command line (#20)
	* Fix issues when specifying a hostname not in configuration. (Fix #4)