@@ -1,3 +1,6 @@
+2010-01-27  Stephane Thiell  <stephane.thiell@cea.fr>
+	* Fix mount_path optional parameter in client configuration line.
+
 2010-01-27  Aurelien Degremont <aurelien.degremont@cea.fr>
 	* Fix tuning.conf parsing. Better error handling.
 	* Add an example file for tuning.
